Update to 1.0.1 and logo

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,4 +1,7 @@
 <template name="header">
+  <div>
+    <div class="logo">Trailer &#9734; Park</div>
+  </div>
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
