Add star styles

--- a/client/stylesheets/globals/logo.import.less
+++ b/client/stylesheets/globals/logo.import.less
@@ -16,4 +16,8 @@
   text-overflow: clip;
   white-space: pre;
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;
+  .star {
+    font-size: 70px;
+    text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #FFFC00 , 0 0 70px #FFFC00 , 0 0 80px #FFFC00 , 0 0 100px #FFFC00 ;
+  }
 }
