--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,6 +1,6 @@
 <template name="header">
-  <div>
-    <div class="logo">Trailer &#9734; Park</div>
+  <div class="text-center">
+    <div class="logo">Trailer <span class="star">&#9734;</span> Park</div>
   </div>
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
