Header styles and potential car images

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,5 +1,6 @@
 // Global namespace
 @import 'globals/base.import.less';
 
-// logo styles
+// logo and header
 @import 'globals/logo.import.less';
+@import 'globals/header.import.less';
