--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <div class="text-center">
+  <div class="text-center header">
     <div class="logo">Trailer <span class="star">&#9734;</span> Park</div>
   </div>
   <div>
