--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,1 +1,1 @@
-<template name="layout">  <div class="container">    {{> header}}    <div id="main" class="row-fluid">      {{> yield}}    </div>  </div></template>
+<template name="layout">  <div class="container-fluid">    {{> header}}    <div id="main" class="row-fluid">      {{> yield}}    </div>  </div></template>
