--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,1 +1,1 @@
-<template name="postItem">  <div class="post">    <div class="post-content">      <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>    </div>    <a href="{{pathFor 'postPage'}}">Talk about it</a>  </div></template>
+<template name="postItem">  <div class="post">    <div class="post-content">      <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>      {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}    </div>    <a href="{{pathFor 'postPage'}}">Talk about it</a>  </div></template>
