--- a/client/templates/comments/comment_item.html
+++ b/client/templates/comments/comment_item.html
@@ -1,1 +1,1 @@
-<template name="commentItem">  <li>    <h4>      <span class="author">{{twitterId}}</span>      <span class="date">on {{submittedText}}</span>    </h4>    <p>{{body}}</p>  </li></template>
+<template name="commentItem">  <li>    <h4>      <span class="author">@{{twitterId}}</span>      <span class="date">on {{submittedText}}</span>    </h4>    <p>{{body}}</p>  </li></template>
