--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,1 +1,1 @@
-<template name="postsList">  <div class="posts">    {{#each posts}}      {{> postItem}}    {{/each}}  </div></template>
+<template name="postsList">  <div class="posts">    {{#each posts}}      {{> postItem}}    {{/each}}  </div>  {{#if nextPath}}    <a class="load-more" href="{{nextPath}}">Load more</a>  {{/if}}</template>
