--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -1,8 +1,7 @@
+// header styles
 div.header {
   padding: 30px;
-  // background: url('/images/cars_dark.png') repeat top left;
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
-  // background-size: cover;
+  img.logo {
+    height: 200px;
+  }
 }
