--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,6 +1,6 @@
 <template name="header">
-  <div class="text-center header">
-    <div class="logo">Trailer <span class="star">&#9734;</span> Park</div>
+  <div class="text-center header clearfix">
+    <h1><img class="logo pull-left" src="/images/neon-sign.png"></h1>
   </div>
   <div>
     <span class="{{activeRouteClass 'home' 'newPosts'}}">
