Add core colour pallete

--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -1,4 +1,14 @@
 // base styles
 body {
-  background-color:#fff;
+  background-color: @white;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: @brand-primary;
+}
+a {
+  color: @brand-alert;
+  &:hover {
+    color: @brand-secondary;
+    text-decoration: none;
+  }
 }
