Brand colors and logo removal

--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -1,14 +1,14 @@
 // base styles
 body {
-  background-color: @white;
+  background-color: @body-bg;
 }
 h1, h2, h3, h4, h5, h6 {
-  color: @brand-primary;
+  color: @brand-grey;
 }
 a {
-  color: @brand-alert;
+  color: @brand-grey;
   &:hover {
-    color: @brand-secondary;
+    color: @brand-primary;
     text-decoration: none;
   }
 }
