--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -1,7 +1,6 @@
 // variables
-
+@body-bg: whitesmoke;
 @white: #fff;
 @black: #000;
-@brand-primary: #8f2216;
-@brand-secondary: #d5a27e;
-@brand-alert: #f7581d;
+@brand-grey: #505050;
+@brand-primary: #E15F5F;
