--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,11 +7,13 @@
     <div class="col-md-3">
       <div class="pull-right">
         {{> loginButtons}}
-        <ul>
-          <li class="dropdown">
-            {{> notifications}}
-          </li>
-        </ul>
+        {{#if currentUser}}
+          <ul>
+            <li class="dropdown">
+              {{> notifications}}
+            </li>
+          </ul>
+        {{/if}}
       </div>
     </div>
   </div>
