Dropping font wisdom

--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -1,9 +1,11 @@
 // base styles
 body {
   background-color: @body-bg;
+  font-family: @serif;
 }
 h1, h2, h3, h4, h5, h6 {
   color: @brand-grey;
+  font-family: @sans;
 }
 a {
   color: @brand-grey;
