--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -4,3 +4,7 @@
 @black: #000;
 @brand-grey: #505050;
 @brand-primary: #E15F5F;
+
+// fonts
+@sans: 'Open Sans', sans-serif;
+@serif: 'Merriweather', serif;
