--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -1,7 +1,13 @@
 // header styles
 div.header {
   h1 {
-    padding: 20px;
+    padding: 10px;
     text-transform: uppercase;
+    font-weight: bold;
+    font-size: 42px;
+    letter-spacing: 8px;
+    span {
+      letter-spacing: 6px;
+    }
   }
 }
