--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">About</div>
     <div class="col-md-6 header">
-      <h1 class="text-center">Trailer Park</h1>
+      <h1 class="text-center">Trailer <span>P</span>ark</h1>
     </div>
     <div class="col-md-3">
       <div class="pull-right">
