Add embedly api call on trailer submit

--- a/client/stylesheets/posts/list.import.less
+++ b/client/stylesheets/posts/list.import.less
@@ -1,8 +1,11 @@
 // posts list styles
 div.posts {
   margin-top: 30px;
-  
+
   div.media {
     margin-top: 30px;
+    img.thumb {
+      width: 200px;
+    }
   }
 }
