--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -6,13 +6,15 @@
     </div>
     <div class="col-md-3">
       <div class="pull-right">
-        {{> loginButtons}}
         {{#if currentUser}}
+          <a href="#" id="logout">Logout</a>
           <ul>
             <li class="dropdown">
               {{> notifications}}
             </li>
           </ul>
+        {{else}}
+          <a href="#" id="twitterLogin">Login with twitter</a>
         {{/if}}
       </div>
     </div>
