Only show embed code on trailer details page

--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,6 +1,9 @@
 <template name="postPage">
   {{> postItem}}
-
+  {{#if isVideo}}
+    THIS HAS EMBED CODE
+    <p>{{{html}}}</p>
+  {{/if}}
   <ul class="comments">
     {{#each comments}}
       {{> commentItem}}
