Small style updates

--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -1,9 +1,9 @@
 // variables
-@body-bg: whitesmoke;
+@body-bg:  #ecf0f1;
 @white: #fff;
 @black: #000;
 @brand-grey: #505050;
-@brand-primary: #E15F5F;
+@brand-primary: #e74c3c;
 
 // fonts
 @sans: 'Open Sans', sans-serif;
