--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -4,7 +4,7 @@ body {
   font-family: @serif;
 }
 h1, h2, h3, h4, h5, h6 {
-  color: @brand-grey;
+  color: @brand-primary;
   font-family: @sans;
 }
 a {
