Towards an actual design feel

--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -1,9 +1,10 @@
 // variables
-@body-bg:  #ecf0f1;
+@body-bg:  #efefef;
 @white: #fff;
 @black: #000;
-@brand-grey: #505050;
+@brand-grey: #272b34;
 @brand-primary: #e74c3c;
+@brand-blue: #0057a0;
 
 // fonts
 @sans: 'Open Sans', sans-serif;
