--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -1,13 +1,19 @@
 // header styles
 div.header {
+  background-color: @brand-blue;
   h1 {
     padding: 10px;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 800;
     font-size: 42px;
     letter-spacing: 8px;
+    color: @brand-grey;
     span {
       letter-spacing: 6px;
+    }
+    span.first-word {
+      color: @white;
+      letter-spacing: 8px;
     }
   }
 }
