--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,13 +1,13 @@
 <template name="header">
-  <div class="row">
-    <div class="col-md-3">About</div>
-    <div class="col-md-6 header">
-      <h1 class="text-center">Trailer <span>P</span>ark</h1>
+  <div class="row header">
+    <div class="col-md-3"><a href="#" class="btn-link">About</a></div>
+    <div class="col-md-6">
+      <h1 class="text-center"><span class="first-word">Trailer</span> <span>P</span>ark</h1>
     </div>
     <div class="col-md-3">
       <div class="pull-right">
         {{#if currentUser}}
-          <a href="#" id="logout">Logout</a>
+          <a href="#" class="btn-link" id="logout">Logout</a>
           <ul>
             <li class="dropdown">
               {{> notifications}}
