More messing with the logo

--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -8,8 +8,10 @@ div.header {
     font-size: 42px;
     letter-spacing: 8px;
     color: @brand-grey;
-    span {
-      letter-spacing: 6px;
+    span.second-word {
+      span {
+        letter-spacing: 6px;
+      }
     }
     span.first-word {
       color: @white;
