--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -2,7 +2,7 @@
   <div class="row header">
     <div class="col-md-3"><a href="#" class="btn-link">About</a></div>
     <div class="col-md-6">
-      <h1 class="text-center"><span class="first-word">Trailer</span> <span>P</span>ark</h1>
+      <h1 class="text-center"><span class="first-word">Trailer</span> <span class="second-word"><span>P</span>ark</span></h1>
     </div>
     <div class="col-md-3">
       <div class="pull-right">
