SQUARES ARE COOL

--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -1,13 +1,12 @@
 // header styles
 div.header {
-  background-color: @brand-blue;
   h1 {
     padding: 10px;
     text-transform: uppercase;
     font-weight: 800;
     font-size: 42px;
     letter-spacing: 8px;
-    color: @brand-grey;
+    color: @white;
     span.second-word {
       span {
         letter-spacing: 6px;
