--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -1,10 +1,11 @@
-// variables
+// colours
 @body-bg:  #efefef;
 @white: #fff;
 @black: #000;
-@brand-grey: #272b34;
-@brand-primary: #e74c3c;
-@brand-blue: #0057a0;
+@pink: rgb(217, 8, 121);
+@blue: rgb(122, 228, 229);
+@orange: rgb(233, 144, 31);
+@purple: rgb(122, 66, 237);
 
 // fonts
 @sans: 'Open Sans', sans-serif;
