--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -1,13 +1,15 @@
 // base styles
 body {
   background-color: @body-bg;
-  font-family: @serif;
+  font-family: @sans;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: @sans;
 }
 a {
+  color: @white;
+  text-decoration: none;
   &:hover {
-    text-decoration: none;
+    color: @black;
   }
 }
