--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -10,5 +10,8 @@
 // logo and header
 @import 'globals/header.import.less';
 
+// squares
+@import 'globals/squares.import.less';
+
 // posts
 @import 'posts/list.import.less';
