--- a/client/stylesheets/posts/list.import.less
+++ b/client/stylesheets/posts/list.import.less
@@ -1,27 +1,9 @@
 // posts list styles
-div.posts {
-
-}
-
-div.square {
-  background-color: @pink;
-  float:left;
-  position: relative;
-  width: 20%;
-  padding-bottom: 20%; /* = width for a 1:1 aspect ratio */
-  margin:0;
-  overflow:hidden;
-  div.square-inner {
-    position:absolute;
-    height:80%; /* = 100% - 2*10% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 10% 5%;
-  }
-  img.thumb {
-    width: 50px;
+div.post-content {
+  h3 {
+    margin: 0;
   }
 }
-
 a.vote-link {
   cursor: default;
 }
