--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -1,10 +1,12 @@
 // header styles
 div.header {
+  font-size: 12px;
   h1 {
-    padding: 10px;
     text-transform: uppercase;
     font-weight: 800;
-    font-size: 42px;
+    font-size: 36px;
+    margin: 0;
+    padding: 0;
     letter-spacing: 8px;
     color: @white;
     span.second-word {
