--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,26 +1,17 @@
 <template name="header">
-  <div class="row header">
-    <div class="col-md-3"><a href="#" class="btn-link">About</a></div>
-    <div class="col-md-6">
-      <h1 class="text-center"><span class="first-word">Trailer</span> <span class="second-word"><span>P</span>ark</span></h1>
-    </div>
-    <div class="col-md-3">
-      <div class="pull-right">
-        {{#if currentUser}}
-          <a href="#" class="btn-link" id="logout">Logout</a>
-          <ul>
-            <li class="dropdown">
-              {{> notifications}}
-            </li>
-          </ul>
-        {{else}}
-          <a href="#" id="twitterLogin">Login with twitter</a>
-        {{/if}}
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 text-center col-md-offset-2">
+  <div class="square">
+    <div class="square-inner header">
+      <h1><span class="first-word">Trailer</span> <span class="second-word"><span>P</span>ark</span></h1>
+      {{#if currentUser}}
+        <a href="#" class="btn-link" id="logout">Logout</a>
+        <ul>
+          <li class="dropdown">
+            {{> notifications}}
+          </li>
+        </ul>
+      {{else}}
+        <a href="#" id="twitterLogin">Login with twitter</a>
+      {{/if}}
       <span class="{{activeRouteClass 'home' 'newPosts'}}">
         <a href="{{pathFor 'newPosts'}}">Latest</a> |
       </span>
