--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,5 +1,15 @@
 <template name="postPage">
-  {{> postItem}}
+
+    <img class="thumb" src="{{thumbnail_url}}" alt="{{title}}">
+    <h2>{{title}}</h2>
+    <p>
+      <a href="#" class="vote-link {{upvotedClass}}">
+        Love
+      </a>
+      {{pluralize votes "love"}}
+    </p>
+    <p><a href="{{url}}">{{domain}}</a></p>
+
   {{#if isVideo}}
     THIS HAS EMBED CODE
     <p>{{{html}}}</p>
