Many UI updates including slabtext

--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -5,4 +5,4 @@
 
 // fonts
 @sans: 'Open Sans', sans-serif;
-@serif: 'Merriweather', serif;
+@header: 'LeagueGothicRegular', 'Impact', 'Charcoal', 'Arial Black', 'Gadget', sans-serif;
