First attempt at adding transitions

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,6 +1,6 @@
 <template name="header">
-  <div class="square">
-    <div class="square-inner header">
+  <div class="header square">
+    <div class="square-inner">
       <h1><span class="first-word">Trailer</span> <span class="second-word"><span>P</span>ark</span></h1>
       {{#if currentUser}}
         <a href="#" class="btn-link" id="logout">Logout</a>
