--- a/client/stylesheets/globals/squares.import.less
+++ b/client/stylesheets/globals/squares.import.less
@@ -6,10 +6,22 @@ div.square {
   padding-bottom: 20%; /* = width for a 1:1 aspect ratio */
   margin:0;
   overflow:hidden;
+  visibility: hidden;
+  opacity: 0.0;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   div.square-inner {
     position:absolute;
     height:80%; /* = 100% - 2*5% padding */
     width:80%; /* = 100% - 2*5% padding */
     padding: 10% 10%;
+  }
+  &:hover {
+  	z-index:1000;
+    box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+    -webkit-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+    -moz-box-shadow:rgba(0, 0, 0, 0.3) 0 16px 16px 0;
   }
 }
