Colour generated on post create

--- a/client/stylesheets/posts/list.import.less
+++ b/client/stylesheets/posts/list.import.less
@@ -4,6 +4,17 @@ div.post-content {
     margin: 0;
     text-transform:uppercase;
   }
+  .heart,
+  .comment {
+    position: absolute;
+    left: 15px;
+    bottom: 15px;
+  }
+
+  .comment {
+    left: auto;
+    right: 15px;
+  }
 }
 a.vote-link {
   cursor: default;
