--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -2,13 +2,13 @@
 
     <img class="thumb" src="{{thumbnail_url}}" alt="{{title}}">
     <h2>{{title}}</h2>
+    <a href="{{url}}">{{domain}}</a>
     <p>
       <a href="#" class="vote-link {{upvotedClass}}">
         Love
       </a>
       {{pluralize votes "love"}}
     </p>
-    <p><a href="{{url}}">{{domain}}</a></p>
 
   {{#if isVideo}}
     THIS HAS EMBED CODE
