--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -9,6 +9,10 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: @white;
   text-decoration: none;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
   &:hover {
     color: @black;
   }
