--- a/client/stylesheets/posts/list.import.less
+++ b/client/stylesheets/posts/list.import.less
@@ -22,6 +22,7 @@ div.paging {
 div.postitem {
   .heart,
   .comment {
+    font-size: 26px;
     position: absolute;
     left: 15px;
     bottom: 15px;
