More logo and page styling

--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -2,23 +2,16 @@
 div.header {
   visibility: visible;
   opacity: 1.0;
-  font-size: 12px;
+  font-size: 18px;
+  div.square-inner {
+    background: #bdc3c7;
+  }
   h1 {
+    padding: 0;
+    margin: -12px 0 0 0;
     text-transform: uppercase;
     font-weight: 800;
-    font-size: 36px;
-    margin: 0;
-    padding: 0;
-    letter-spacing: 8px;
-    color: @white;
-    span.second-word {
-      span {
-        letter-spacing: 6px;
-      }
-    }
-    span.first-word {
-      color: @white;
-      letter-spacing: 8px;
-    }
+    // line-height: 100px;
+    color: #5C97BF;
   }
 }
