--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -14,4 +14,10 @@ div.header {
     // line-height: 100px;
     color: #5C97BF;
   }
+  i {
+    margin-right: 15px;
+  }
+  div.nav {
+    text-align: center;
+  }
 }
