--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -19,18 +19,14 @@
               <a href="{{pathFor 'postSubmit'}}"><i class="fa fa-file-video-o"></i></a>
             </span>
           </span>
+          {{> notifications}}
           <span>
             <span class="simptip-position-top" data-tooltip="Sign out">
               <a href="#" class="btn-link" id="logout"><i class="fa fa-sign-out"></i></a>
             </span>
           </span>
-          <ul>
-            <li class="dropdown">
-              {{> notifications}}
-            </li>
-          </ul>
         {{else}}
-          <span class="simptip-position-top" data-tooltip="Sign in">
+          <span class="simptip-position-top" data-tooltip="Sign in with Twitter">
             <a href="#" id="twitterLogin"><i class="fa fa-sign-in"></i></a>
           </span>
         {{/if}}
