--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -6,3 +6,6 @@
 // fonts
 @sans: 'Open Sans', sans-serif;
 @header: 'LeagueGothicRegular', 'Impact', 'Charcoal', 'Arial Black', 'Gadget', sans-serif;
+
+// square width
+@square: 25%;
