--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,7 +1,7 @@
 <template name="header">
   <div class="header square">
     <div class="square-inner">
-      <h1>Trailer Park</h1>
+      <a href="{{pathFor 'newPosts'}}"><h1>Trailer Park</h1></a>
       <div class="nav">
         <span class="{{activeRouteClass 'home' 'newPosts'}}">
           <span class="simptip-position-top" data-tooltip="Fresh">
