--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -6,6 +6,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: @header;
   color: @white;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;  
 }
 a {
   color: @white;
