--- a/client/stylesheets/globals/squares.import.less
+++ b/client/stylesheets/globals/squares.import.less
@@ -23,6 +23,7 @@ div.square {
     box-shadow: rgba(0, 0, 0, 0.3) 0 16px 16px 0;
     -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 16px 16px 0;
     -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 16px 16px 0;
+    h2, h3 { color: @black }
   }
 }
 
@@ -31,5 +32,6 @@ div.square.nolink {
     box-shadow: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
+    h2, h3 { color: @white }
   }
 }
