Styling the main post page

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -15,6 +15,7 @@
 
 // posts
 @import 'posts/list.import.less';
+@import 'posts/page.import.less';
 
 // slabtext
 @import 'globals/slabtext.import.less';
