--- a/client/templates/comments/comment_submit.html
+++ b/client/templates/comments/comment_submit.html
@@ -7,6 +7,8 @@
         <span class="help-block">{{errorMessage 'body'}}</span>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Add comment</button>
+    <div class="actions">
+      <button type="submit" class="btn">SAY IT!</button>
+    </div>
   </form>
 </template>
