--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -24,7 +24,10 @@
         {{#if currentUser}}
           {{> commentSubmit}}
         {{else}}
-          <p>Sign in with twitter to post a comment</p>
+          <p>
+            Something to say?<br>
+            <a href="#" id="twitterLogin">Sign in with Twitter to join the conversation</a>
+          </p>
         {{/if}}
       </div>
     </div>
