--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -7,6 +7,9 @@
 // Global namespace
 @import 'globals/base.import.less';
 
+// forms
+@import 'globals/forms.import.less';
+
 // squares
 @import 'globals/squares.import.less';
 
