Comment square styling - enough to start with

--- a/client/stylesheets/posts/page.import.less
+++ b/client/stylesheets/posts/page.import.less
@@ -7,3 +7,20 @@ div.video {
     width: 100%;
   }
 }
+
+div.comment {
+  h4 {
+    a {
+      color: @black;
+      &:hover {
+        color: @white;
+      }
+    }
+    span.date {
+      display: inline-block;
+      padding-left: 5px;
+      color: @black;
+      font-size: 14px;
+    }
+  }
+}
