--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -34,7 +34,7 @@
   </div>
   {{#each comments}}
     <div class="square nolink visible">
-      <div class="square-inner" style="background-color: {{randomColour}}">
+      <div class="square-inner comment" style="background-color: {{randomColour}}">
         {{> commentItem}}
       </div>
     </div>
