--- a/client/stylesheets/globals/forms.import.less
+++ b/client/stylesheets/globals/forms.import.less
@@ -10,12 +10,20 @@ form {
   }
 
   textarea {
+    border: 0;
     width: 100%;
     min-height: 80px;
+    padding: 5px;
+    background-color: #eee;
+    color: #6C7A89;
+    resize: none;
   }
 }
 
-input:focus { outline: none; }
+input:focus,
+textarea:focus {
+  outline: none;
+}
 
 div.actions {
   width: 100%;
