Style load more button

--- a/client/stylesheets/posts/list.import.less
+++ b/client/stylesheets/posts/list.import.less
@@ -18,6 +18,10 @@ a.vote-link.upvotable {
 div.paging {
   visibility: visible;
   opacity: 1.0;
+  text-align: center;
+  h1 i.fa {
+    font-size: 5em;
+  }
 }
 
 div.postitem {
