--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -20,6 +20,50 @@ div.header {
     text-align: center;
   }
 }
-ul.notification-container {
+
+// notifications
+#notification-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  background: #bdc3c7;
+  opacity: 0.8;
   display: none;
+  z-index: 3000;
+
+  h3 {
+    position: absolute;
+    top: 12px;
+    left: 40px;
+    padding: 0;
+    margin: 0;
+    color: @white;
+    text-transform: uppercase;
+  }
+
+  div.notification-inner {
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
+  }
+
+  a.notification-item {
+    display: block;
+    margin: 10px 10px 15px;
+    text-align: left;
+  }
+
+  a.close-icon {
+    display: block;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+  }
+
+
 }
