--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -50,6 +50,14 @@ div.header {
     width: 100%;
     height: 100%;
     padding-top: 40px;
+
+    span {
+      display: block;
+      text-align: center;
+      margin: 50px 10px 15px;
+      color: @white;
+      text-transform: uppercase;
+    }
   }
 
   a.notification-item {
