--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -13,8 +13,11 @@
 // squares
 @import 'globals/squares.import.less';
 
-// logo and header
+// logo, header
 @import 'globals/header.import.less';
+
+// footer
+@import 'globals/footer.import.less';
 
 // posts
 @import 'posts/list.import.less';
