--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,1 +1,1 @@
-<template name="layout">  <div>    {{> header}}    {{> errors}}    {{> yield}}  </div></template>
+<template name="layout">  <div>    {{> header}}    {{> errors}}    {{> yield}}    {{> footer}}  </div></template>
