Convert fonts to ems and add meta tags for mobile

--- a/client/stylesheets/globals/footer.import.less
+++ b/client/stylesheets/globals/footer.import.less
@@ -3,11 +3,11 @@ div.footer {
   width: 100%;
   clear: both;
   text-align: center;
-  font-size: 14px;
+  font-size: @14size;
   color: @white;
   padding: 20px;
 
   i.fa {
-    font-size: 18px;
+    font-size: @18size;
   }
 }
