--- a/client/stylesheets/globals/header.import.less
+++ b/client/stylesheets/globals/header.import.less
@@ -2,7 +2,7 @@
 div.header {
   visibility: visible;
   opacity: 1.0;
-  font-size: 18px;
+  font-size: @18size;
   div.square-inner {
     background: #bdc3c7;
   }
