--- a/client/stylesheets/globals/responsive.import.less
+++ b/client/stylesheets/globals/responsive.import.less
@@ -1,11 +1,15 @@
-@media only screen and (max-width: 1000px) {
+// portrait and landscape ipad
+@media only screen
+and (max-device-width : 1024px)  {
   div.square {
-    width: 50%;
-    padding-bottom: 50%;
+    width: 33%;
+    padding-bottom: 33%;
   }
 }
 
-@media only screen and (max-width: 767px) {
+// iphone portrait and landscape
+@media only screen
+and (max-device-width : 667px) {
   div.square {
     width: 100%;
     padding-bottom: 100%;
