--- a/client/stylesheets/globals/variables.import.less
+++ b/client/stylesheets/globals/variables.import.less
@@ -6,6 +6,13 @@
 // fonts
 @sans: 'Open Sans', sans-serif;
 @header: 'LeagueGothicRegular', 'Impact', 'Charcoal', 'Arial Black', 'Gadget', sans-serif;
+@12size: 0.750em;
+@14size: 0.875em;
+@16size: 1.000em;
+@18size: 1.125em;
+@20size: 1.250em;
+@26size: 1.625em;
+
 
 // square width
 @square: 25%;
