--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -24,10 +24,8 @@
         {{#if currentUser}}
           {{> commentSubmit}}
         {{else}}
-          <p>
-            Something to say?<br>
-            <a href="#" id="twitterLogin">Sign in with Twitter to join the conversation</a>
-          </p>
+          <p>Something to say?</p>
+          <p><a href="#" id="twitterLogin">Sign in with Twitter to join the conversation</a></p>
         {{/if}}
       </div>
     </div>
