--- a/client/stylesheets/globals/forms.import.less
+++ b/client/stylesheets/globals/forms.import.less
@@ -5,7 +5,7 @@ form {
     display: block;
     color: @white;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: @16size;
     margin-bottom: 10px;
   }
 
