--- a/client/stylesheets/posts/page.import.less
+++ b/client/stylesheets/posts/page.import.less
@@ -11,13 +11,13 @@ div.video {
 div.comment {
   h4 {
     a {
-      font-size: 20px;
+      font-size: @20size;
     }
     span.date {
       display: inline-block;
       padding-left: 5px;
       color: @black;
-      font-size: 12px;
+      font-size: @12size;
     }
   }
 }
