footer style updates

--- a/client/stylesheets/globals/footer.import.less
+++ b/client/stylesheets/globals/footer.import.less
@@ -4,8 +4,10 @@ div.footer {
   clear: both;
   text-align: center;
   font-size: @14size;
-  color: @white;
+  color: #999;
   padding: 20px;
+
+  a { color: #999; }
 
   i.fa {
     font-size: @18size;
