Update footer text and link style

--- a/client/stylesheets/globals/footer.import.less
+++ b/client/stylesheets/globals/footer.import.less
@@ -4,8 +4,12 @@ div.footer {
   clear: both;
   text-align: center;
   font-size: 14px;
-  color: @white;
+  color: #2980b9;
   padding: 20px;
+
+  a {
+    color: #2980b9;
+  }
 
   i.fa {
     font-size: 18px;
