--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -1,6 +1,6 @@
 <template name="footer">
   <div class="footer">
-    Designed and built with love by <a href="http://www.versusgoliath.co.uk">VS</a>
+    Made by <a href="http://www.versusgoliath.co.uk">VS</a>
     <a href="http://twitter.com/versusg"><i class="fa fa-twitter"></i></a>
   </div>
 </template>
